--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Suraj Jagtap  Weather Dashboard</h2>
     <div class="container">
       <div class="weather-input">
-        <h3>Enter a City Name</h3>
+        <h3>Enter A City Name</h3>
         <input
           class="city-input"
           type="text"
